add update and test push routes
